--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,3 +24,11 @@ GRAPHITI_CONNECTION_TIMEOUT=30
 OPENAI_MODEL=gpt-4-turbo-preview
 OPENAI_MAX_TOKENS=4000
 OPENAI_TEMPERATURE=0.1
+
+# Additional environment variables
+DATABASE_URL=postgresql://user:password@localhost:5432/cinegraph
+DB_PASSWORD=your_database_password_here
+ENCRYPTION_KEY=your_encryption_key_here
+JWT_SECRET_KEY=your_jwt_secret_key_here
+SECRET_KEY=your_secret_key_here
+SUPABASE_DB_PASSWORD=your_supabase_db_password_here
