--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,12 @@ GRAPHITI_DATABASE_NAME=neo4j
 GRAPHITI_MAX_CONNECTIONS=10
 GRAPHITI_CONNECTION_TIMEOUT=30
 
+# Neo4j URI Configuration (alternative names used by some scripts)
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=your_neo4j_password_here
+NEO4J_DATABASE=neo4j
+
 # OpenAI Configuration
 OPENAI_MODEL=gpt-4-turbo-preview
 OPENAI_MAX_TOKENS=4000
